# oauth2freeipa

./: pyproject.toml
oauth2freeipa/: __init__.py
