[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oauth2freeipa"
version = "2.1.0"
authors = [
  { name="Félix-Antoine Fortin", email="felix@calculquebec.ca" },
]
description = "Package to create FreeIPA users after connecting in JupyterHub with oauthenticator or ltiauthenticator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "jupyterhub",
  "oauthenticator",
  "jupyterhub-ltiauthenticator"
]

[project.urls]
Homepage = "https://github.com/magiccastle/oauth2freeipa"
Issues = "https://github.com/magiccastle/oauth2freeipa/issues"

[project.entry-points."jupyterhub.authenticators"]
ipa-oauth = "oauth2freeipa:LocalFreeIPAGenericOAuthenticator"
ipa-github = "oauth2freeipa:LocalFreeIPAGitHubOAuthenticator"
ipa-cilogon = "oauth2freeipa:LocalFreeIPACILogonOAuthenticator"
ipa-lti11 = "oauth2freeipa:LocalFreeIPALTI11Authenticator"
ipa-lti13 = "oauth2freeipa:LocalFreeIPALTI13Authenticator"
